--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,17 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "express": "^5.1.0",
+    "sqlite3": "^5.1.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
+  },
+  "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.3.0",
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "@types/sqlite3": "^3.1.11"
   }
 }
